update menambahkan endpoint Open Api
